@@ -1,51 +1,72 @@
 package cn.lili.modules.payment.kit.plugin.wechat;
 
-import cn.hutool.core.net.URLDecoder;
-import cn.hutool.core.net.URLEncoder;
-import cn.hutool.json.JSONArray;
-import cn.hutool.json.JSONObject;
 import cn.hutool.json.JSONUtil;
 import cn.lili.cache.Cache;
-import cn.lili.cache.CachePrefix;
-import cn.lili.common.enums.ClientTypeEnum;
 import cn.lili.common.enums.ResultCode;
 import cn.lili.common.enums.ResultUtil;
 import cn.lili.common.exception.ServiceException;
-import cn.lili.common.properties.ApiProperties;
 import cn.lili.common.security.context.UserContext;
 import cn.lili.common.utils.CurrencyUtil;
 import cn.lili.common.utils.SnowFlake;
 import cn.lili.common.utils.StringUtils;
 import cn.lili.common.vo.ResultMessage;
 import cn.lili.modules.connect.entity.Connect;
-import cn.lili.modules.connect.entity.enums.ConnectEnum;
+import cn.lili.modules.connect.entity.enums.SourceEnum;
 import cn.lili.modules.connect.service.ConnectService;
 import cn.lili.modules.member.entity.dto.ConnectQueryDTO;
+import cn.lili.modules.order.order.entity.dos.Order;
 import cn.lili.modules.order.order.service.OrderService;
 import cn.lili.modules.payment.entity.RefundLog;
 import cn.lili.modules.payment.entity.enums.PaymentMethodEnum;
 import cn.lili.modules.payment.kit.CashierSupport;
 import cn.lili.modules.payment.kit.Payment;
-import cn.lili.modules.payment.kit.core.PaymentHttpResponse;
-import cn.lili.modules.payment.kit.core.enums.RequestMethodEnums;
 import cn.lili.modules.payment.kit.core.enums.SignType;
-import cn.lili.modules.payment.kit.core.kit.*;
+import cn.lili.modules.payment.kit.core.kit.HttpKit;
+import cn.lili.modules.payment.kit.core.kit.IpKit;
+import cn.lili.modules.payment.kit.core.kit.WxPayKit;
 import cn.lili.modules.payment.kit.core.utils.DateTimeZoneUtil;
 import cn.lili.modules.payment.kit.dto.PayParam;
 import cn.lili.modules.payment.kit.dto.PaymentSuccessParams;
 import cn.lili.modules.payment.kit.params.dto.CashierParam;
-import cn.lili.modules.payment.kit.plugin.wechat.enums.WechatApiEnum;
-import cn.lili.modules.payment.kit.plugin.wechat.enums.WechatDomain;
-import cn.lili.modules.payment.kit.plugin.wechat.model.*;
 import cn.lili.modules.payment.service.PaymentService;
 import cn.lili.modules.payment.service.RefundLogService;
 import cn.lili.modules.system.entity.dos.Setting;
+import cn.lili.modules.system.entity.dto.WithdrawalSetting;
 import cn.lili.modules.system.entity.dto.connect.WechatConnectSetting;
 import cn.lili.modules.system.entity.dto.connect.dto.WechatConnectSettingItem;
 import cn.lili.modules.system.entity.dto.payment.WechatPaymentSetting;
 import cn.lili.modules.system.entity.enums.SettingEnum;
 import cn.lili.modules.system.service.SettingService;
+import cn.lili.modules.wallet.entity.dos.MemberWithdrawApply;
+import cn.lili.modules.wallet.entity.dto.TransferResultDTO;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
+import com.google.gson.Gson;
+import com.wechat.pay.java.core.Config;
+import com.wechat.pay.java.core.RSAAutoCertificateConfig;
+import com.wechat.pay.java.core.RSAPublicKeyConfig;
+import com.wechat.pay.java.core.exception.ValidationException;
+import com.wechat.pay.java.core.notification.NotificationConfig;
+import com.wechat.pay.java.core.notification.NotificationParser;
+import com.wechat.pay.java.core.notification.RequestParam;
+import com.wechat.pay.java.service.payments.app.AppService;
+import com.wechat.pay.java.service.payments.h5.H5Service;
+import com.wechat.pay.java.service.payments.h5.model.H5Info;
+import com.wechat.pay.java.service.payments.h5.model.SceneInfo;
+import com.wechat.pay.java.service.payments.jsapi.JsapiService;
+import com.wechat.pay.java.service.payments.model.Transaction;
+import com.wechat.pay.java.service.payments.nativepay.NativePayService;
+import com.wechat.pay.java.service.payments.nativepay.model.Amount;
+import com.wechat.pay.java.service.payments.nativepay.model.PrepayRequest;
+import com.wechat.pay.java.service.payments.nativepay.model.PrepayResponse;
+import com.wechat.pay.java.service.refund.RefundService;
+import com.wechat.pay.java.service.refund.model.AmountReq;
+import com.wechat.pay.java.service.refund.model.CreateRequest;
+import com.wechat.pay.java.service.refund.model.Refund;
+import com.wechat.pay.java.service.transferbatch.TransferBatchService;
+import com.wechat.pay.java.service.transferbatch.model.InitiateBatchTransferRequest;
+import com.wechat.pay.java.service.transferbatch.model.InitiateBatchTransferResponse;
+import com.wechat.pay.java.service.transferbatch.model.TransferDetailInput;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -53,10 +74,9 @@ import org.springframework.stereotype.Component;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.nio.charset.StandardCharsets;
-import java.security.GeneralSecurityException;
-import java.security.cert.X509Certificate;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 
 /**
  * 微信支付
@@ -89,11 +109,6 @@ public class WechatPlugin implements Payment {
     @Autowired
     private RefundLogService refundLogService;
     /**
-     * API域名
-     */
-    @Autowired
-    private ApiProperties apiProperties;
-    /**
      * 配置
      */
     @Autowired
@@ -118,10 +133,10 @@ public class WechatPlugin implements Payment {
 
             //支付参数准备
             SceneInfo sceneInfo = new SceneInfo();
-            sceneInfo.setPayer_client_ip(IpKit.getRealIp(request));
+            sceneInfo.setPayerClientIp(IpKit.getRealIp(request));
             H5Info h5Info = new H5Info();
             h5Info.setType("WAP");
-            sceneInfo.setH5_info(h5Info);
+            sceneInfo.setH5Info(h5Info);
 
             //支付金额
             Integer fen = CurrencyUtil.fen(cashierParam.getPrice());
@@ -131,32 +146,41 @@ public class WechatPlugin implements Payment {
             String timeExpire = DateTimeZoneUtil.dateToTimeZone(System.currentTimeMillis() + 1000 * 60 * 3);
 
             //回传数据
-            String attach = URLEncoder.createDefault().encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8);
+            String attach = java.net.URLEncoder.encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8.name());
+
 
             WechatPaymentSetting setting = wechatPaymentSetting();
-            UnifiedOrderModel unifiedOrderModel = new UnifiedOrderModel()
-                    .setAppid(setting.getAppId())
-                    .setMchid(setting.getMchId())
-                    .setDescription(cashierParam.getDetail())
-                    .setOut_trade_no(outOrderNo)
-                    .setTime_expire(timeExpire)
-                    .setAttach(attach)
-                    .setNotify_url(notifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT))
-                    .setAmount(new Amount().setTotal(fen)).setScene_info(sceneInfo);
+            String appid = setting.getH5AppId();
+            if (appid == null) {
+                throw new ServiceException(ResultCode.WECHAT_PAYMENT_NOT_SETTING);
+            }
 
-            log.info("统一下单参数 {}", JSONUtil.toJsonStr(unifiedOrderModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.H5_PAY.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(unifiedOrderModel)
-            );
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
+            }
+            // 构建service
+            H5Service service = new H5Service.Builder().config(config).build();
 
-            return ResultUtil.data(JSONUtil.toJsonStr(response.getBody()));
+            com.wechat.pay.java.service.payments.h5.model.PrepayRequest prepayRequest = new com.wechat.pay.java.service.payments.h5.model.PrepayRequest();
+            com.wechat.pay.java.service.payments.h5.model.Amount amount = new com.wechat.pay.java.service.payments.h5.model.Amount();
+            amount.setTotal(fen);
+            prepayRequest.setAmount(amount);
+            prepayRequest.setAppid(appid);
+            prepayRequest.setMchid(setting.getMchId());
+            prepayRequest.setDescription(cashierParam.getDetail());
+            prepayRequest.setNotifyUrl(notifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+            prepayRequest.setAttach(attach);
+            prepayRequest.setTimeExpire(timeExpire);
+            prepayRequest.setOutTradeNo(outOrderNo);
+            prepayRequest.setSceneInfo(sceneInfo);
+            // 调用下单方法，得到应答
+            com.wechat.pay.java.service.payments.h5.model.PrepayResponse response = service.prepay(prepayRequest);
+            updateOrderPayNo(payParam, outOrderNo);
+
+            return ResultUtil.data(response.getH5Url());
         } catch (Exception e) {
             log.error("微信H5支付错误", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
@@ -168,14 +192,12 @@ public class WechatPlugin implements Payment {
 
         try {
             Connect connect = connectService.queryConnect(
-                    ConnectQueryDTO.builder().userId(UserContext.getCurrentUser().getId()).unionType(ConnectEnum.WECHAT.name()).build()
+                    ConnectQueryDTO.builder().userId(UserContext.getCurrentUser().getId()).unionType(SourceEnum.WECHAT_OFFIACCOUNT_OPEN_ID.name()).build()
             );
             if (connect == null) {
                 return null;
             }
 
-            Payer payer = new Payer();
-            payer.setOpenid(connect.getUnionId());
 
             CashierParam cashierParam = cashierSupport.cashierParam(payParam);
 
@@ -186,47 +208,46 @@ public class WechatPlugin implements Payment {
             //过期时间
             String timeExpire = DateTimeZoneUtil.dateToTimeZone(System.currentTimeMillis() + 1000 * 60 * 3);
 
-            String attach = URLEncoder.createDefault().encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8);
+            // 将 Hutool URLEncoder 替换为标准库
+            String attach = java.net.URLEncoder.encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8.name());
 
             WechatPaymentSetting setting = wechatPaymentSetting();
-            UnifiedOrderModel unifiedOrderModel = new UnifiedOrderModel()
-                    .setAppid(setting.getAppId())
-                    .setMchid(setting.getMchId())
-                    .setDescription(cashierParam.getDetail())
-                    .setOut_trade_no(outOrderNo)
-                    .setTime_expire(timeExpire)
-                    .setAttach(attach)
-                    .setNotify_url(notifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT))
-                    .setAmount(new Amount().setTotal(fen))
-                    .setPayer(payer);
-
-            log.info("统一下单参数 {}", JSONUtil.toJsonStr(unifiedOrderModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.JS_API_PAY.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(unifiedOrderModel)
-            );
-            //根据证书序列号查询对应的证书来验证签名结果
-            boolean verifySignature = WxPayKit.verifySignature(response, getPlatformCert());
-            log.info("verifySignature: {}", verifySignature);
-            log.info("统一下单响应 {}", response);
-
-            if (verifySignature) {
-                String body = response.getBody();
-                JSONObject jsonObject = JSONUtil.parseObj(body);
-                String prepayId = jsonObject.getStr("prepay_id");
-                Map<String, String> map = WxPayKit.jsApiCreateSign(setting.getAppId(), prepayId, setting.getApiclient_key());
-                log.info("唤起支付参数:{}", map);
-
-                return ResultUtil.data(map);
+            String appid = setting.getJsapiAppId();
+            if (appid == null) {
+                throw new ServiceException(ResultCode.WECHAT_PAYMENT_NOT_SETTING);
             }
-            log.error("微信支付参数验证错误，请及时处理");
-            throw new ServiceException(ResultCode.PAY_ERROR);
+
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
+            }
+            // 构建service
+            JsapiService service = new JsapiService.Builder().config(config).build();
+
+            com.wechat.pay.java.service.payments.jsapi.model.PrepayRequest prepayRequest = new com.wechat.pay.java.service.payments.jsapi.model.PrepayRequest();
+            com.wechat.pay.java.service.payments.jsapi.model.Amount amount = new com.wechat.pay.java.service.payments.jsapi.model.Amount();
+
+            com.wechat.pay.java.service.payments.jsapi.model.Payer payer = new com.wechat.pay.java.service.payments.jsapi.model.Payer();
+            payer.setOpenid(connect.getUnionId());
+            amount.setTotal(fen);
+            prepayRequest.setAmount(amount);
+            prepayRequest.setAppid(appid);
+            prepayRequest.setMchid(setting.getMchId());
+            prepayRequest.setDescription(cashierParam.getDetail());
+            prepayRequest.setNotifyUrl(notifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+            prepayRequest.setAttach(attach);
+            prepayRequest.setTimeExpire(timeExpire);
+            prepayRequest.setOutTradeNo(outOrderNo);
+            prepayRequest.setPayer(payer);
+            // 调用下单方法，得到应答
+            com.wechat.pay.java.service.payments.jsapi.model.PrepayResponse response = service.prepay(prepayRequest);
+            updateOrderPayNo(payParam, outOrderNo);
+
+            Map<String, String> map = WxPayKit.jsApiCreateSign(appid, response.getPrepayId(), setting.getApiclientKey());
+            log.info("唤起支付参数:{}", map);
+            return ResultUtil.data(map);
         } catch (Exception e) {
             log.error("支付异常", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
@@ -247,49 +268,47 @@ public class WechatPlugin implements Payment {
             //过期时间
             String timeExpire = DateTimeZoneUtil.dateToTimeZone(System.currentTimeMillis() + 1000 * 60 * 3);
 
-            String attach = URLEncoder.createDefault().encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8);
+            // 将 Hutool URLEncoder 替换为标准库
+            String attach = java.net.URLEncoder.encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8.name());
 
             WechatPaymentSetting setting = wechatPaymentSetting();
-            UnifiedOrderModel unifiedOrderModel = new UnifiedOrderModel()
-                    .setAppid(setting.getAppId())
-                    .setMchid(setting.getMchId())
-                    .setDescription(cashierParam.getDetail())
-                    .setOut_trade_no(outOrderNo)
-                    .setTime_expire(timeExpire)
-                    .setAttach(attach)
-                    .setNotify_url(notifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT))
-                    .setAmount(new Amount().setTotal(fen));
-
-
-            log.info("统一下单参数 {}", JSONUtil.toJsonStr(unifiedOrderModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.APP_PAY.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(unifiedOrderModel)
-            );
-            //根据证书序列号查询对应的证书来验证签名结果
-            boolean verifySignature = WxPayKit.verifySignature(response, getPlatformCert());
-            log.info("verifySignature: {}", verifySignature);
-            log.info("统一下单响应 {}", response);
-
-            if (verifySignature) {
-                JSONObject jsonObject = JSONUtil.parseObj(response.getBody());
-                String prepayId = jsonObject.getStr("prepay_id");
-                Map<String, String> map = WxPayKit.appPrepayIdCreateSign(setting.getAppId(),
-                        setting.getMchId(),
-                        prepayId,
-                        setting.getApiclient_key(), SignType.HMACSHA256);
-                log.info("唤起支付参数:{}", map);
-
-                return ResultUtil.data(map);
+            String appid = setting.getJsapiAppId();
+            if (appid == null) {
+                throw new ServiceException(ResultCode.WECHAT_PAYMENT_NOT_SETTING);
             }
-            log.error("微信支付参数验证错误，请及时处理");
-            throw new ServiceException(ResultCode.PAY_ERROR);
+
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
+            }
+            // 构建service
+            AppService service = new AppService.Builder().config(config).build();
+
+            com.wechat.pay.java.service.payments.app.model.PrepayRequest prepayRequest = new com.wechat.pay.java.service.payments.app.model.PrepayRequest();
+            com.wechat.pay.java.service.payments.app.model.Amount amount = new com.wechat.pay.java.service.payments.app.model.Amount();
+            amount.setTotal(fen);
+            prepayRequest.setAmount(amount);
+            prepayRequest.setAppid(appid);
+            prepayRequest.setMchid(setting.getMchId());
+            prepayRequest.setDescription(cashierParam.getDetail());
+            prepayRequest.setNotifyUrl(notifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+            prepayRequest.setAttach(attach);
+            prepayRequest.setTimeExpire(timeExpire);
+            prepayRequest.setOutTradeNo(outOrderNo);
+
+            // 调用下单方法，得到应答
+            com.wechat.pay.java.service.payments.app.model.PrepayResponse response = service.prepay(prepayRequest);
+            updateOrderPayNo(payParam, outOrderNo);
+            Map<String, String> map = WxPayKit.appPrepayIdCreateSign(appid,
+                    setting.getMchId(),
+                    response.getPrepayId(),
+                    setting.getApiclientKey(), SignType.MD5);
+            log.info("唤起支付参数:{}", map);
+            //修改付款单号
+            updateOrderPayNo(payParam, outOrderNo);
+            return ResultUtil.data(map);
         } catch (Exception e) {
             log.error("支付异常", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
@@ -310,42 +329,42 @@ public class WechatPlugin implements Payment {
             //过期时间
             String timeExpire = DateTimeZoneUtil.dateToTimeZone(System.currentTimeMillis() + 1000 * 60 * 3);
 
-            String attach = URLEncoder.createDefault().encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8);
+            // 将 Hutool URLEncoder 替换为标准库
+            String attach = java.net.URLEncoder.encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8.name());
 
             WechatPaymentSetting setting = wechatPaymentSetting();
-            UnifiedOrderModel unifiedOrderModel = new UnifiedOrderModel()
-                    .setAppid(setting.getAppId())
-                    .setMchid(setting.getMchId())
-                    .setDescription(cashierParam.getDetail())
-                    .setOut_trade_no(outOrderNo)
-                    .setTime_expire(timeExpire)
-                    //回传参数
-                    .setAttach(attach)
-                    .setNotify_url(notifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT))
-                    .setAmount(new Amount().setTotal(fen));
 
-            log.info("统一下单参数 {}", JSONUtil.toJsonStr(unifiedOrderModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.NATIVE_PAY.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(unifiedOrderModel)
-            );
-            log.info("统一下单响应 {}", response);
-            //根据证书序列号查询对应的证书来验证签名结果
-            boolean verifySignature = WxPayKit.verifySignature(response, getPlatformCert());
-            log.info("verifySignature: {}", verifySignature);
-
-            if (verifySignature) {
-                return ResultUtil.data(new JSONObject(response.getBody()).getStr("code_url"));
-            } else {
-                log.error("微信支付参数验证错误，请及时处理");
-                throw new ServiceException(ResultCode.PAY_ERROR);
+            String appid = setting.getNativeAppId();
+            if (appid == null) {
+                throw new ServiceException(ResultCode.WECHAT_PAYMENT_NOT_SETTING);
             }
+
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
+            }
+            // 构建service
+            NativePayService service = new NativePayService.Builder().config(config).build();
+
+            PrepayRequest prepayRequest = new PrepayRequest();
+            Amount amount = new Amount();
+            amount.setTotal(fen);
+            prepayRequest.setAmount(amount);
+            prepayRequest.setAppid(appid);
+            prepayRequest.setMchid(setting.getMchId());
+            prepayRequest.setDescription(cashierParam.getDetail());
+            prepayRequest.setNotifyUrl(notifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+            prepayRequest.setAttach(attach);
+            prepayRequest.setTimeExpire(timeExpire);
+            prepayRequest.setOutTradeNo(outOrderNo);
+
+            // 调用下单方法，得到应答
+            PrepayResponse response = service.prepay(prepayRequest);
+            updateOrderPayNo(payParam, outOrderNo);
+            return ResultUtil.data(response.getCodeUrl());
+
         } catch (ServiceException e) {
             log.error("支付异常", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
@@ -353,6 +372,7 @@ public class WechatPlugin implements Payment {
             log.error("支付异常", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
         }
+
     }
 
     @Override
@@ -360,13 +380,13 @@ public class WechatPlugin implements Payment {
 
         try {
             Connect connect = connectService.queryConnect(
-                    ConnectQueryDTO.builder().userId(UserContext.getCurrentUser().getId()).unionType(ConnectEnum.WECHAT_MP_OPEN_ID.name()).build()
+                    ConnectQueryDTO.builder().userId(UserContext.getCurrentUser().getId()).unionType(SourceEnum.WECHAT_MP_OPEN_ID.name()).build()
             );
             if (connect == null) {
                 return null;
             }
 
-            Payer payer = new Payer();
+            com.wechat.pay.java.service.payments.jsapi.model.Payer payer = new com.wechat.pay.java.service.payments.jsapi.model.Payer();
             payer.setOpenid(connect.getUnionId());
 
             CashierParam cashierParam = cashierSupport.cashierParam(payParam);
@@ -380,53 +400,45 @@ public class WechatPlugin implements Payment {
 
             //微信小程序，appid 需要单独获取，这里读取了联合登陆配置的appid ，实际场景小程序自动登录，所以这个appid是最为保险的做法
             //如果有2开需求，这里需要调整，修改这个appid的获取途径即可
-            WechatConnectSettingItem wechatConnectSettingItem = getWechatMPSetting();
-            String appid = null;
-            if (wechatConnectSettingItem != null) {
-                appid = getWechatMPSetting().getAppId();
+            String appid = wechatPaymentSetting().getMpAppId();
+            if (StringUtils.isEmpty(appid)) {
+                throw new ServiceException(ResultCode.WECHAT_PAYMENT_NOT_SETTING);
             }
-
-            String attach = URLEncoder.createDefault().encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8);
+            // 将 Hutool URLEncoder 替换为标准库
+            String attach = java.net.URLEncoder.encode(JSONUtil.toJsonStr(payParam), StandardCharsets.UTF_8.name());
 
             WechatPaymentSetting setting = wechatPaymentSetting();
-            UnifiedOrderModel unifiedOrderModel = new UnifiedOrderModel()
-                    .setAppid(appid)
-                    .setMchid(setting.getMchId())
-                    .setDescription(cashierParam.getDetail())
-                    .setOut_trade_no(outOrderNo)
-                    .setTime_expire(timeExpire)
-                    .setAttach(attach)
-                    .setNotify_url(notifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT))
-                    .setAmount(new Amount().setTotal(fen))
-                    .setPayer(payer);
 
-            log.info("统一下单参数 {}", JSONUtil.toJsonStr(unifiedOrderModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.JS_API_PAY.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(unifiedOrderModel)
-            );
-            //根据证书序列号查询对应的证书来验证签名结果
-            boolean verifySignature = WxPayKit.verifySignature(response, getPlatformCert());
-            log.info("verifySignature: {}", verifySignature);
-            log.info("统一下单响应 {}", response);
-
-            if (verifySignature) {
-                String body = response.getBody();
-                JSONObject jsonObject = JSONUtil.parseObj(body);
-                String prepayId = jsonObject.getStr("prepay_id");
-                Map<String, String> map = WxPayKit.jsApiCreateSign(appid, prepayId, setting.getApiclient_key());
-                log.info("唤起支付参数:{}", map);
-
-                return ResultUtil.data(map);
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
             }
-            log.error("微信支付参数验证错误，请及时处理");
-            throw new ServiceException(ResultCode.PAY_ERROR);
+            // 构建service
+            JsapiService service = new JsapiService.Builder().config(config).build();
+
+            com.wechat.pay.java.service.payments.jsapi.model.PrepayRequest prepayRequest = new com.wechat.pay.java.service.payments.jsapi.model.PrepayRequest();
+            com.wechat.pay.java.service.payments.jsapi.model.Amount amount = new com.wechat.pay.java.service.payments.jsapi.model.Amount();
+            amount.setTotal(fen);
+            prepayRequest.setAmount(amount);
+            prepayRequest.setAppid(appid);
+            prepayRequest.setMchid(setting.getMchId());
+            prepayRequest.setDescription(cashierParam.getDetail());
+            prepayRequest.setNotifyUrl(notifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+            prepayRequest.setAttach(attach);
+            prepayRequest.setTimeExpire(timeExpire);
+            prepayRequest.setOutTradeNo(outOrderNo);
+            prepayRequest.setPayer(payer);
+            // 调用下单方法，得到应答
+            com.wechat.pay.java.service.payments.jsapi.model.PrepayResponse response = service.prepay(prepayRequest);
+            updateOrderPayNo(payParam, outOrderNo);
+
+            Map<String, String> map = WxPayKit.jsApiCreateSign(appid, response.getPrepayId(), setting.getApiclientKey());
+            log.info("唤起支付参数:{}", map);
+
+            return ResultUtil.data(map);
+
         } catch (Exception e) {
             log.error("支付异常", e);
             throw new ServiceException(ResultCode.PAY_ERROR);
@@ -453,6 +465,94 @@ public class WechatPlugin implements Payment {
     }
 
     /**
+     * 微信提现
+     * 文档地址：https://pay.weixin.qq.com/docs/merchant/apis/batch-transfer-to-balance/transfer-batch/initiate-batch-transfer.html
+     *
+     * @param memberWithdrawApply 会员提现申请
+     */
+    @Override
+    public TransferResultDTO transfer(MemberWithdrawApply memberWithdrawApply) {
+        try {
+            //获取提现设置
+            WithdrawalSetting withdrawalSetting = new Gson().fromJson(settingService.get(SettingEnum.WITHDRAWAL_SETTING.name()).getSettingValue(),
+                    WithdrawalSetting.class);
+
+            //获取用户OPENID
+            WechatConnectSetting wechatConnectSetting = new Gson().fromJson(settingService.get(SettingEnum.WECHAT_CONNECT.name()).getSettingValue()
+                    , WechatConnectSetting.class);
+            String source = "";
+            for (WechatConnectSettingItem wechatConnectSettingItem : wechatConnectSetting.getWechatConnectSettingItems()) {
+                if (wechatConnectSettingItem.getAppId().equals(withdrawalSetting.getWechatAppId())) {
+                    switch (wechatConnectSettingItem.getClientType()) {
+                        case "PC":
+                            source = SourceEnum.WECHAT_PC_OPEN_ID.name();
+                            break;
+                        case "H5":
+                            source = SourceEnum.WECHAT_OFFIACCOUNT_OPEN_ID.name();
+                            break;
+                        case "MP":
+                            source = SourceEnum.WECHAT_MP_OPEN_ID.name();
+                            break;
+                        case "APP":
+                            source = SourceEnum.WECHAT_APP_OPEN_ID.name();
+                            break;
+                    }
+                }
+            }
+
+
+            //获取用户openId
+            Connect connect = connectService.queryConnect(
+                    ConnectQueryDTO.builder().userId(memberWithdrawApply.getMemberId())
+                            .unionType(source).build()
+            );
+            //获取微信设置
+            WechatPaymentSetting setting = wechatPaymentSetting();
+
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
+            } else {
+                config = this.getPublicKeyConfig(setting);
+            }
+            // 构建service
+            TransferBatchService service = new TransferBatchService.Builder().config(config).build();
+
+            InitiateBatchTransferRequest request = new InitiateBatchTransferRequest();
+            request.setAppid(withdrawalSetting.getWechatAppId());
+            request.setOutBatchNo(SnowFlake.createStr("T"));
+            request.setBatchName("用户提现");
+            request.setBatchRemark("用户提现");
+            request.setTotalAmount(CurrencyUtil.getFenLong(memberWithdrawApply.getApplyMoney()));
+            request.setTotalNum(1);
+            request.setTransferSceneId("1000");
+
+            List<TransferDetailInput> transferDetailListList = new ArrayList<>();
+            {
+                TransferDetailInput transferDetailInput = new TransferDetailInput();
+                transferDetailInput.setOutDetailNo(SnowFlake.createStr("TD"));
+                transferDetailInput.setTransferAmount(CurrencyUtil.getFenLong(memberWithdrawApply.getApplyMoney()));
+                transferDetailInput.setTransferRemark("用户提现");
+                transferDetailInput.setOpenid(connect.getUnionId());
+                transferDetailListList.add(transferDetailInput);
+            }
+            request.setTransferDetailList(transferDetailListList);
+
+            // 调用下单方法，得到应答
+            InitiateBatchTransferResponse response = service.initiateBatchTransfer(request);
+            log.info("微信提现响应 {}", response);
+
+
+            return TransferResultDTO.builder().result(response.getBatchId() != null).build();
+            //根据自身业务进行接下来的任务处理
+        } catch (Exception e) {
+            e.printStackTrace();
+            return TransferResultDTO.builder().result(false).response(e.getMessage()).build();
+        }
+
+    }
+
+    /**
      * 验证结果，执行支付回调
      *
      * @param request
@@ -460,41 +560,63 @@ public class WechatPlugin implements Payment {
      */
     private void verifyNotify(HttpServletRequest request) throws Exception {
 
-        String timestamp = request.getHeader("Wechatpay-Timestamp");
-        String nonce = request.getHeader("Wechatpay-Nonce");
-        String serialNo = request.getHeader("Wechatpay-Serial");
-        String signature = request.getHeader("Wechatpay-Signature");
-
-        log.info("timestamp:{} nonce:{} serialNo:{} signature:{}", timestamp, nonce, serialNo, signature);
-        String result = HttpKit.readData(request);
-        log.info("微信支付通知密文 {}", result);
+        // 构造 RequestParam
+        RequestParam requestParam = new RequestParam.Builder()
+                .serialNumber(request.getHeader("Wechatpay-Serial"))
+                .nonce(request.getHeader("Wechatpay-Nonce"))
+                .signature(request.getHeader("Wechatpay-Signature"))
+                .timestamp(request.getHeader("Wechatpay-Timestamp"))
+                .body(HttpKit.readData(request))
+                .build();
 
         WechatPaymentSetting setting = wechatPaymentSetting();
-        //校验服务器端响应¬
-        String plainText = WxPayKit.verifyNotify(serialNo, result, signature, nonce, timestamp,
-                setting.getApiKey3(), Objects.requireNonNull(getPlatformCert()));
+        NotificationConfig config = null;
+        if ("CERT".equals(setting.getPublicType())) {
+            config = new RSAAutoCertificateConfig.Builder()
+                    .merchantId(setting.getMchId())
+                    .privateKey(setting.getApiclientKey())
+                    .merchantSerialNumber(setting.getSerialNumber())
+                    .apiV3Key(setting.getApiKey3())
+                    .build();
+        } else {
+            config = new RSAPublicKeyConfig.Builder()
+                    .merchantId(setting.getMchId())
+                    .apiV3Key(setting.getApiKey3())
+                    .privateKey(setting.getApiclientKey())
+                    .merchantSerialNumber(setting.getSerialNumber())
+                    .publicKeyId(setting.getPublicId())
+                    .publicKey(setting.getPublicKey())
+                    .build();
+        }
 
-        log.info("微信支付通知明文 {}", plainText);
+        // 初始化 NotificationParser
+        NotificationParser parser = new NotificationParser(config);
 
-        JSONObject jsonObject = JSONUtil.parseObj(plainText);
+        try {
+            // 以支付通知回调为例，验签、解密并转换成 Transaction
+            Transaction transaction = parser.parse(requestParam, Transaction.class);
 
-        String payParamStr = jsonObject.getStr("attach");
-        String payParamJson = URLDecoder.decode(payParamStr, StandardCharsets.UTF_8);
-        PayParam payParam = JSONUtil.toBean(payParamJson, PayParam.class);
+            // 将 Hutool URLDecoder 替换为标准库
+            String payParamJson = java.net.URLDecoder.decode(transaction.getAttach(), StandardCharsets.UTF_8.name());
 
+            PayParam payParam = new Gson().fromJson(payParamJson, PayParam.class);
 
-        String tradeNo = jsonObject.getStr("transaction_id");
-        Double totalAmount = CurrencyUtil.reversalFen(jsonObject.getJSONObject("amount").getDouble("total"));
+            Double totalAmount = CurrencyUtil.reversalFen(transaction.getAmount().getTotal());
 
-        PaymentSuccessParams paymentSuccessParams = new PaymentSuccessParams(
-                PaymentMethodEnum.WECHAT.name(),
-                tradeNo,
-                totalAmount,
-                payParam
-        );
+            PaymentSuccessParams paymentSuccessParams = new PaymentSuccessParams(
+                    PaymentMethodEnum.WECHAT.name(),
+                    transaction.getTransactionId(),
+                    totalAmount,
+                    payParam
+            );
 
-        paymentService.success(paymentSuccessParams);
-        log.info("微信支付回调：支付成功{}", plainText);
+            paymentService.success(paymentSuccessParams);
+        } catch (ValidationException e) {
+            // 签名验证失败，返回 401 UNAUTHORIZED 状态码
+            log.error("sign verification failed", e);
+
+        }
+
     }
 
     @Override
@@ -502,39 +624,33 @@ public class WechatPlugin implements Payment {
 
         try {
 
-            Amount amount = new Amount().setRefund(CurrencyUtil.fen(refundLog.getTotalAmount()))
-                    .setTotal(CurrencyUtil.fen(orderService.getPaymentTotal(refundLog.getOrderSn())));
-
-            //退款参数准备
-            RefundModel refundModel = new RefundModel()
-                    .setTransaction_id(refundLog.getPaymentReceivableNo())
-                    .setOut_refund_no(refundLog.getOutOrderNo())
-                    .setReason(refundLog.getRefundReason())
-                    .setAmount(amount)
-                    .setNotify_url(refundNotifyUrl(apiProperties.getBuyer(), PaymentMethodEnum.WECHAT));
-
+            AmountReq amount = new AmountReq();
+            amount.setRefund(CurrencyUtil.getFenLong(refundLog.getTotalAmount()));
+            amount.setTotal(CurrencyUtil.getFenLong(orderService.getPaymentTotal(refundLog.getOrderSn())));
+            amount.setCurrency("CNY");
+            //获取微信设置
             WechatPaymentSetting setting = wechatPaymentSetting();
 
-            log.info("微信退款参数 {}", JSONUtil.toJsonStr(refundModel));
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.POST,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.DOMESTIC_REFUNDS.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    JSONUtil.toJsonStr(refundModel)
-            );
-            log.info("微信退款响应 {}", response);
-            //退款申请成功
-            if (response.getStatus() == 200) {
-                refundLogService.save(refundLog);
+            Config config = null;
+            if ("CERT".equals(setting.getPublicType())) {
+                config = this.getCertificateConfig(setting);
             } else {
-                //退款申请失败
-                refundLog.setErrorMessage(response.getBody());
-                refundLogService.save(refundLog);
+                config = this.getPublicKeyConfig(setting);
             }
+            // 构建service
+            RefundService refundService = new RefundService.Builder().config(config).build();
+
+            CreateRequest request = new CreateRequest();
+            request.setTransactionId(refundLog.getPaymentReceivableNo());
+            request.setAmount(amount);
+            request.setOutRefundNo(refundLog.getOutOrderNo());
+            request.setReason(refundLog.getRefundReason());
+            request.setNotifyUrl(refundNotifyUrl(wechatPaymentSetting().getCallbackUrl(), PaymentMethodEnum.WECHAT));
+
+            Refund refund = refundService.create(request);
+
+            log.info("微信退款响应 {}", refund);
+            refundLogService.save(refundLog);
         } catch (Exception e) {
             log.error("微信退款申请失败", e);
         }
@@ -542,54 +658,46 @@ public class WechatPlugin implements Payment {
     }
 
     @Override
-    public void cancel(RefundLog refundLog) {
-        this.refund(refundLog);
-    }
-
-
-    @Override
     public void refundNotify(HttpServletRequest request) {
-        String timestamp = request.getHeader("Wechatpay-Timestamp");
-        String nonce = request.getHeader("Wechatpay-Nonce");
-        String serialNo = request.getHeader("Wechatpay-Serial");
-        String signature = request.getHeader("Wechatpay-Signature");
+        // 构造 RequestParam
+        RequestParam requestParam = new RequestParam.Builder()
+                .serialNumber(request.getHeader("Wechatpay-Serial"))
+                .nonce(request.getHeader("Wechatpay-Nonce"))
+                .signature(request.getHeader("Wechatpay-Signature"))
+                .timestamp(request.getHeader("Wechatpay-Timestamp"))
+                .body(HttpKit.readData(request))
+                .build();
 
-        log.info("timestamp:{} nonce:{} serialNo:{} signature:{}", timestamp, nonce, serialNo, signature);
-        String result = HttpKit.readData(request);
-        log.info("微信退款通知密文 {}", result);
-        JSONObject ciphertext = JSONUtil.parseObj(result);
+        WechatPaymentSetting setting = wechatPaymentSetting();
+        NotificationConfig config = null;
+        if ("CERT".equals(setting.getPublicType())) {
+            config = new RSAAutoCertificateConfig.Builder()
+                    .merchantId(setting.getMchId())
+                    .privateKey(setting.getApiclientKey())
+                    .merchantSerialNumber(setting.getSerialNumber())
+                    .apiV3Key(setting.getApiKey3())
+                    .build();
+        } else {
+            config = new RSAPublicKeyConfig.Builder()
+                    .merchantId(setting.getMchId())
+                    .apiV3Key(setting.getApiKey3())
+                    .privateKey(setting.getApiclientKey())
+                    .merchantSerialNumber(setting.getSerialNumber())
+                    .publicKeyId(setting.getPublicId())
+                    .publicKey(setting.getPublicKey())
+                    .build();
+        }
 
-        try { //校验服务器端响应¬
-            String plainText = WxPayKit.verifyNotify(serialNo, result, signature, nonce, timestamp,
-                    wechatPaymentSetting().getApiKey3(), Objects.requireNonNull(getPlatformCert()));
-            log.info("微信退款通知明文 {}", plainText);
-
-            if (("REFUND.SUCCESS").equals(ciphertext.getStr("event_type"))) {
-                log.info("退款成功 {}", plainText);
-                //校验服务器端响应
-                JSONObject jsonObject = JSONUtil.parseObj(plainText);
-                String transactionId = jsonObject.getStr("transaction_id");
-                String refundId = jsonObject.getStr("refund_id");
-
-                RefundLog refundLog = refundLogService.getOne(new LambdaQueryWrapper<RefundLog>().eq(RefundLog::getPaymentReceivableNo, transactionId));
-                if (refundLog != null) {
-                    refundLog.setIsRefund(true);
-                    refundLog.setReceivableNo(refundId);
-                    refundLogService.saveOrUpdate(refundLog);
-                }
-
-            } else {
-                log.info("退款失败 {}", plainText);
-                JSONObject jsonObject = JSONUtil.parseObj(plainText);
-                String transactionId = jsonObject.getStr("transaction_id");
-                String refundId = jsonObject.getStr("refund_id");
-
-                RefundLog refundLog = refundLogService.getOne(new LambdaQueryWrapper<RefundLog>().eq(RefundLog::getPaymentReceivableNo, transactionId));
-                if (refundLog != null) {
-                    refundLog.setReceivableNo(refundId);
-                    refundLog.setErrorMessage(ciphertext.getStr("summary"));
-                    refundLogService.saveOrUpdate(refundLog);
-                }
+        // 初始化 NotificationParser
+        NotificationParser parser = new NotificationParser(config);
+        try {
+            Refund refund = parser.parse(requestParam, Refund.class);
+            RefundLog refundLog = refundLogService.getOne(new LambdaQueryWrapper<RefundLog>().eq(RefundLog::getPaymentReceivableNo,
+                    refund.getTransactionId()));
+            if (refundLog != null) {
+                refundLog.setIsRefund(true);
+                refundLog.setReceivableNo(refund.getRefundId());
+                refundLogService.saveOrUpdate(refundLog);
             }
         } catch (Exception e) {
             log.error("微信退款失败", e);
@@ -613,100 +721,53 @@ public class WechatPlugin implements Payment {
     }
 
     /**
-     * 获取平台公钥
+     * 获取微信公钥配置
      *
-     * @return 平台公钥
-     */
-    private X509Certificate getPlatformCert() {
-        //获取缓存中的平台公钥，如果有则直接返回，否则去微信请求
-        String publicCert = cache.getString(CachePrefix.WECHAT_PLAT_FORM_CERT.getPrefix());
-        if (!StringUtils.isEmpty(publicCert)) {
-            return PayKit.getCertificate(publicCert);
-        }
-        //获取平台证书列表
-        try {
-
-            WechatPaymentSetting setting = wechatPaymentSetting();
-
-            PaymentHttpResponse response = WechatApi.v3(
-                    RequestMethodEnums.GET,
-                    WechatDomain.CHINA.toString(),
-                    WechatApiEnum.GET_CERTIFICATES.toString(),
-                    setting.getMchId(),
-                    setting.getSerialNumber(),
-                    null,
-                    setting.getApiclient_key(),
-                    ""
-            );
-            String body = response.getBody();
-            log.info("获取微信平台证书body: {}", body);
-            if (response.getStatus() == 200) {
-                JSONObject jsonObject = JSONUtil.parseObj(body);
-                JSONArray dataArray = jsonObject.getJSONArray("data");
-                //默认认为只有一个平台证书
-                JSONObject encryptObject = dataArray.getJSONObject(0);
-                JSONObject encryptCertificate = encryptObject.getJSONObject("encrypt_certificate");
-                String associatedData = encryptCertificate.getStr("associated_data");
-                String cipherText = encryptCertificate.getStr("ciphertext");
-                String nonce = encryptCertificate.getStr("nonce");
-                publicCert = getPlatformCertStr(associatedData, nonce, cipherText);
-                long second = (PayKit.getCertificate(publicCert).getNotAfter().getTime() - System.currentTimeMillis()) / 1000;
-                cache.put(CachePrefix.WECHAT_PLAT_FORM_CERT.getPrefix(), publicCert, second);
-            } else {
-                log.error("证书获取失败：{}" + body);
-                throw new ServiceException(ResultCode.WECHAT_CERT_ERROR);
-            }
-            return PayKit.getCertificate(publicCert);
-        } catch (Exception e) {
-            log.error("证书获取失败", e);
-        }
-        return null;
-    }
-
-    /**
-     * 获取平台证书缓存的字符串
-     * 下列各个密钥参数
-     *
-     * @param associatedData 密钥参数
-     * @param nonce          密钥参数
-     * @param cipherText     密钥参数
-     * @return platform key
-     * @throws GeneralSecurityException 密钥获取异常
-     */
-    private String getPlatformCertStr(String associatedData, String nonce, String cipherText) throws GeneralSecurityException {
-
-
-        AesUtil aesUtil = new AesUtil(wechatPaymentSetting().getApiKey3().getBytes(StandardCharsets.UTF_8));
-        //平台证书密文解密
-        //encrypt_certificate 中的  associated_data nonce  ciphertext
-        return aesUtil.decryptToString(
-                associatedData.getBytes(StandardCharsets.UTF_8),
-                nonce.getBytes(StandardCharsets.UTF_8),
-                cipherText
-        );
-    }
-
-
-    /**
-     * 获取微信小程序配置
-     *
+     * @param setting
      * @return
      */
-    private WechatConnectSettingItem getWechatMPSetting() {
-        Setting setting = settingService.get(SettingEnum.WECHAT_CONNECT.name());
+    private RSAPublicKeyConfig getPublicKeyConfig(WechatPaymentSetting setting) {
+        return
+                new RSAPublicKeyConfig.Builder()
+                        .merchantId(setting.getMchId())
+                        .privateKey(setting.getApiclientKey())
+                        .publicKey(setting.getPublicKey())
+                        .publicKeyId(setting.getPublicId())
+                        .merchantSerialNumber(setting.getSerialNumber())
+                        .apiV3Key(setting.getApiKey3())
+                        .build();
+    }
 
-        WechatConnectSetting wechatConnectSetting = JSONUtil.toBean(setting.getSettingValue(), WechatConnectSetting.class);
+    /**
+     * 获取微信证书配置
+     *
+     * @param setting
+     * @return
+     */
+    private RSAAutoCertificateConfig getCertificateConfig(WechatPaymentSetting setting) {
+        return new RSAAutoCertificateConfig.Builder()
+                .merchantId(setting.getMchId())
+                .privateKey(setting.getApiclientKey())
+                .merchantSerialNumber(setting.getSerialNumber())
+                .apiV3Key(setting.getApiKey3())
+                .build();
+    }
 
-        if (wechatConnectSetting == null) {
-            throw new ServiceException(ResultCode.WECHAT_CONNECT_NOT_EXIST);
+    /**
+     * 修改订单支付单号
+     *
+     * @param payParam   支付参数
+     * @param outOrderNo 订单号
+     */
+    private void updateOrderPayNo(PayParam payParam, String outOrderNo) {
+        if ("ORDER".equals(payParam.getOrderType())) {
+            orderService.update(new LambdaUpdateWrapper<Order>()
+                    .eq(Order::getSn, payParam.getSn())
+                    .set(Order::getPayOrderNo, outOrderNo));
+        } else if ("TRADE".equals(payParam.getOrderType())) {
+            orderService.update(new LambdaUpdateWrapper<Order>()
+                    .eq(Order::getTradeSn, payParam.getSn())
+                    .set(Order::getPayOrderNo, outOrderNo));
         }
-        //寻找对应对微信小程序登录配置
-        for (WechatConnectSettingItem wechatConnectSettingItem : wechatConnectSetting.getWechatConnectSettingItems()) {
-            if (wechatConnectSettingItem.getClientType().equals(ClientTypeEnum.WECHAT_MP.name())) {
-                return wechatConnectSettingItem;
-            }
-        }
-
-        throw new ServiceException(ResultCode.WECHAT_CONNECT_NOT_EXIST);
     }
 }
